tests/ui/associated-consts/wrong-projection-self-ty-invalid-bivariant-arg2.stderr
error[E0271]: type mismatch resolving `<i32 as Proj>::Assoc == u32`
  --> $DIR/wrong-projection-self-ty-invalid-bivariant-arg2.rs:15:5
   |
LL |     Fail::<i32, u32>::C
   |     ^^^^^^^^^^^^^^^^ type mismatch resolving `<i32 as Proj>::Assoc == u32`
   |
note: expected this to be `u32`
  --> $DIR/wrong-projection-self-ty-invalid-bivariant-arg2.rs:5:18
   |
LL |     type Assoc = T;
   |                  ^
note: required by a bound in `Fail`
  --> $DIR/wrong-projection-self-ty-invalid-bivariant-arg2.rs:8:21
   |
LL | struct Fail<T: Proj<Assoc = U>, U>(T);
   |                     ^^^^^^^^^ required by this bound in `Fail`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
